@@ -1,3 +1,8 @@
+2009-07-08  Emilio Meschi  <emilio.meschi@cern.ch>
+
+	* tag V01-06-18
+	* Complete the migration away from getter functions for FEDNumbering
+	
 2009-07-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V01-06-17
